--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "classnames": "^2.2.5",
     "css-loader": "^0.23.0",
     "cssnano": "^3.3.2",
+    "d3-ease": "^1.0.3",
     "debug": "^2.2.0",
     "extract-text-webpack-plugin": "^1.0.0",
     "file-loader": "^0.8.4",
@@ -124,12 +125,16 @@
     "react-cookie": "^0.4.6",
     "react-copy-to-clipboard": "^5.0.0",
     "react-dom": "^15.6.1",
+    "react-fullpage": "^0.1.18",
     "react-google-maps": "^4.11.0",
     "react-helmet": "^3.1.0",
+    "react-intl-universal": "^1.9.2",
+    "react-move": "^2.7.0",
     "react-redux": "^4.0.0",
     "react-router": "^2.2.0",
     "react-router-redux": "^4.0.0",
     "react-scroll": "^1.3.0",
+    "react-sublime-video": "^0.2.5",
     "redux": "^3.7.0",
     "redux-api-middleware": "^1.0.2",
     "redux-thunk": "^2.0.0",
