--- a/package.json
+++ b/package.json
@@ -128,13 +128,13 @@
     "react-fullpage": "^0.1.18",
     "react-google-maps": "^4.11.0",
     "react-helmet": "^3.1.0",
+    "react-html5video": "^2.5.1",
     "react-intl-universal": "^1.9.2",
     "react-move": "^2.7.0",
     "react-redux": "^4.0.0",
     "react-router": "^2.2.0",
     "react-router-redux": "^4.0.0",
     "react-scroll": "^1.3.0",
-    "react-sublime-video": "^0.2.5",
     "redux": "^3.7.0",
     "redux-api-middleware": "^1.0.2",
     "redux-thunk": "^2.0.0",
